Fixed navbar validation mode visibility

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -58,4 +58,13 @@ li.nav-item {
     opacity: 1;
 
   }
+
+}
+
+.nav-item-dark {
+  color: $darker;
+}
+
+.pointer {
+  cursor: pointer;
 }
